<resources>
    <string name="app_name">AndroidAdapted</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android User</string>
    <string name="nav_header_subtitle">android.user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_list">List</string>
    <string name="menu_obstructed_ad">Obstructed Ad</string>
    <string name="menu_sign_in">Sign In</string>

    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="signin_button">Sign in and Submit</string>
</resources>